<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActsqlAddActivity">

    <TextView
        android:id="@+id/sqlAddLabel"
        style="@style/textViewStyle"
        android:text="Add Book"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!-- Title -->
    <LinearLayout
        android:id="@+id/sqllayoutTitle"
        style="@style/linearLayoutstyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sqlAddLabel"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/sqltvTitle"
            android:layout_width="100dp"
            style="@style/labelStyle"
            android:text="@string/stitle"
            />

        <EditText
            android:id="@+id/sqletTitle"
            style="@style/labelStyle"
            android:layout_width="300dp"
            android:background="@null"
            android:hint="@string/stitle"
            android:inputType="textPersonName"
            android:textColorHint="#78909C"
            tools:ignore="DuplicateSpeakableTextCheck"
            android:autofillHints="" />
    </LinearLayout>

    <!-- Author -->
    <LinearLayout
        android:id="@+id/sqllayoutAuthor"
        style="@style/linearLayoutstyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sqllayoutTitle"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/sqltvAdd"
            android:layout_width="100dp"
            android:text="@string/sauthor"
            style="@style/labelStyle"/>

        <EditText
            android:id="@+id/sqletAuthor"
            style="@style/labelStyle"
            android:layout_width="300dp"
            android:hint="@string/sauthor"
            android:inputType="textPersonName"
            android:textColorHint="#78909C"
            tools:ignore="DuplicateSpeakableTextCheck"
            android:autofillHints="" />
    </LinearLayout>

    <!-- Category -->
    <LinearLayout
        android:id="@+id/sqllayoutCategory"
        style="@style/linearLayoutstyle"
        app:layout_constraintTop_toBottomOf="@+id/sqllayoutAuthor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/sqltvCategory"
            android:layout_width="100dp"
            android:text="@string/scategory"
            style="@style/labelStyle"/>

        <CheckBox
            android:id="@+id/sqlcbCat1"
            android:text="@string/category1"
            style="@style/chkbox"/>
        <CheckBox
            android:id="@+id/sqlcbCat2"
            android:text="@string/category2"
            style="@style/chkbox"/>

        <CheckBox
            android:id="@+id/sqlcbCat3"
            android:text="@string/category3"
            style="@style/chkbox"/>
    </LinearLayout>

    <!-- Type -->
    <LinearLayout
        android:id="@+id/sqllayoutType"
        style="@style/linearLayoutstyle"
        app:layout_constraintTop_toBottomOf="@+id/sqllayoutCategory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints">

    <TextView
        android:id="@+id/sqltvType"
        android:layout_width="100dp"
        android:text="@string/stype"
        style="@style/labelStyle"/>

        <RadioGroup
            android:id="@+id/sqlrg"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/sqlrbPaper"
                style="@style/rdbtn"
                android:checked="true"
                android:text="@string/paper"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/sqlrbDigital"
                style="@style/rdbtn"
                android:text="@string/digital"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/sqlrbBoth"
                style="@style/rdbtn"
                android:text="@string/both"
                tools:ignore="TouchTargetSizeCheck" />
        </RadioGroup>
    </LinearLayout>

    <!-- Price -->
    <LinearLayout
        android:id="@+id/sqllayoutPrice"
        style="@style/linearLayoutstyle"
        app:layout_constraintTop_toBottomOf="@+id/sqllayoutType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/sqltvPrice"
            android:layout_width="100dp"
            android:text="@string/sprice"
            style="@style/labelStyle"/>

        <EditText
            android:id="@+id/sqletPrice"
            style="@style/labelStyle"
            android:layout_width="300dp"
            android:background="@null"
            android:hint="@string/sprice"
            android:inputType="numberDecimal"
            android:textColorHint="#78909C"
            tools:ignore="DuplicateSpeakableTextCheck"
            android:autofillHints="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sqllayoutButtons"
        style="@style/linearLayoutstyle"
        app:layout_constraintTop_toBottomOf="@+id/sqllayoutPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/sqladdbSubmit"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/teal_200"
            android:gravity="center|center_vertical"
            android:text="@string/addbook"
            android:textAllCaps="false"
            android:textColor="#D50000"
            android:textSize="20sp"
            android:textStyle="bold"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/sqladdbClear"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/teal_200"
            android:gravity="center|center_vertical"
            android:text="@string/clear"
            android:textAllCaps="false"
            android:textColor="#D50000"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>